# aituber-starter-kit

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml
config/characters/: default.yaml
docs/ja/: advanced-usage.md  dashboard.md  faq.md  getting-started.md  long-term-memory.md  troubleshooting.md
docs/ja/ai-config/: README.md  api-setup.md  character-design.md  llm-comparison.md  prompt-engineering.md
docs/ja/modeling/: README.md  avatar-setup.md  live2d-guide.md  rigging-tips.md  tools-comparison.md  vrm-guide.md
docs/ja/streaming/: README.md  audio-setup.md  multi-platform.md  obs-setup.md  twitch-setup.md  youtube-live.md
docs/plan/: aituber-starter-kit_implementation_plan.md
examples/: README.md
examples/characters/: cool.yaml  gamer.yaml  genki.yaml  ojou.yaml  sleepy.yaml  tsundere.yaml
scripts/: README.md  check_dependencies.py  test_voicevox.py  test_vtube_studio.py
src/: __init__.py  config.py  factory.py  main.py  pipeline.py
src/ai/: __init__.py  anthropic_client.py  base.py  character.py  google_client.py  memory.py  ollama_client.py  openai_client.py
src/avatar/: __init__.py  base.py  vtube_studio.py
src/chat/: __init__.py  base.py  comment_queue.py  models.py  twitch_chat.py  youtube_chat.py
src/dashboard/: __init__.py  api.py  models.py  server.py
src/dashboard/static/: app.js  index.html  style.css
src/expression/: __init__.py  emotion_analyzer.py  lip_sync.py
src/memory/: __init__.py  long_term_memory.py  models.py  retriever.py
src/tts/: __init__.py  base.py  coeiroink.py  models.py  nijivoice.py  style_bert_vits.py  voicevox.py
src/utils/: __init__.py  audio.py
templates/: README.md  character_template.yaml
tests/: __init__.py  conftest.py  test_character.py  test_chat.py  test_config.py  test_emotion_analyzer.py  test_factory.py  test_llm_clients.py  test_memory.py  test_tts_engines.py  test_twitch_chat.py
